# patchfs

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  vcdiff_incremental.c  vcdiff_incremental.h
tools/: CMakeLists.txt  encoder.cpp  vcdiff-fuse.c  vcdiff-partial.c
